<resources>
    <string name="app_name">MandiriNews</string>
    <string name="item_news_title">Plastic Straws</string>
    <string name="item_news_description">Plastic straws are bad for health</string>
    <string name="item_news_publishedAt">10.00 PM</string>
    <string name="item_news_source">Reuters</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_headline_head">Editor Choice</string>
    <string name="tv_headline_title">Title</string>
    <string name="tv_headline_source">reuters</string>
    <string name="tv_headline_time">10h</string>
    <string name="tv_news_title">Latest News</string>
    <string name="retry">retry</string>
    <string name="open_in_web">Open in Web</string>
    <string name="bookmark">Bookmark</string>
</resources>